[package]
name = "rs-logger"
version = "0.1.5"
edition = "2021"
license-file = "LICENSE"
description = "A rust logging library."
documentation = "https://docs.rs/rs-logger/latest/rs_logger/index.html"
repository = "https://github.com/Anmsh27/rs-logger"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
time = "0.3.11"
chrono = "0.4.19"
